#274 Prevented toolbar__logo from collapsing to new lines by hiding overflow and defining minimun width

--- a/src/components/menubar/Toolbar/Toolbar.css
+++ b/src/components/menubar/Toolbar/Toolbar.css
@@ -22,10 +22,12 @@
   top: 26px;
   left: 91px;
   width: 205px;
+  min-width: 3em;
   height: 20px;
   font-size: 20px;
   font-family: Arial;
   margin-top: 20px;
+  overflow: hidden;
 }
 
 .toolbar__logo a {
